--- a/src/App.css
+++ b/src/App.css
@@ -115,7 +115,7 @@ img{
   /* max-height: 100%;   */
   /* max-width: 100%;  */
   /* position: absolute;    */
-  top: 0;  
+  top: 20%;  
   bottom: 0;  
   left: 0;  
   right: 0;  
